<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_product"
                android:layout_marginBottom="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/groceryItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleProducto"
                android:ems="10"
                android:hint="@string/hint_item"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/groceryQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryItem"
                android:ems="10"
                android:hint="@string/hint_Quantity"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/groceryQty"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/button_save" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>