<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@android:color/holo_orange_light">

        <RelativeLayout
            android:id="@+id/relativeID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/nameID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/articulo"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/cantidadID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameID"
                android:text="@string/Cantidad"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/dateAdded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cantidadID"
                android:paddingTop="5dp"
                android:text="@string/Date"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/dateAdded"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/deleteButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_delete" />

            </TableRow>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>